# Rust-Battle-Project

./: Cargo.toml  flat_AvaxGods.sol
battle-contract/: Cargo.toml
battle-contract/src/: balance.rs  lib.rs  storage_types.rs  sword_contract.rs  test.rs
sep-nft/: Cargo.toml
sep-nft/src/: balance.rs  lib.rs  nft.rs  storage_types.rs
src/: lib.rs  test.rs
