[workspace]
resolver = "2"

members = ["battle-contract"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"

[workspace.dependencies.rand]
version = "0.8.5"
default-features = false
features = ["small_rng"]

[workspace.dependencies.chrono]
version = "0.4.26"
